// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select closes drop on esc 1`] = `
<div
  class="StyledBox-bStriS iQipYn"
  direction="column"
  id="select-drop__select"
>
  <div
    class="StyledBox-bStriS feBFzz"
    direction="column"
    overflow="auto"
  >
    <div
      class="StyledBox-bStriS jDxevM"
      direction="column"
      role="menubar"
      tabindex="-1"
    >
      <button
        class="StyledButton-gXzblK khQPBH"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-bStriS gedxom"
          direction="column"
        >
          <span
            class="StyledText-eJMSZI bUVmvh"
          >
            one
          </span>
        </div>
      </button>
      <button
        class="StyledButton-gXzblK khQPBH"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-bStriS gedxom"
          direction="column"
        >
          <span
            class="StyledText-eJMSZI bUVmvh"
          >
            two
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select closes drop on esc 2`] = `
"

.iQipYn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width:700px) {
  .cfJbKA {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .khQPBH {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`Select closes drop on esc 3`] = `
<button
  class="StyledButton-gXzblK cfJbKA"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS janhJy"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS jagiFv"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select closes drop on esc 4`] = `
<button
  class="StyledButton-gXzblK cfJbKA"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS janhJy"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS jagiFv"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 1`] = `
<button
  class="StyledButton-gXzblK cfJbKA"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS janhJy"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS jagiFv"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 2`] = `
<button
  class="StyledButton-gXzblK cfJbKA"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS janhJy"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS jagiFv"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 3`] = `
<div
  class="StyledBox-bStriS iQipYn"
  direction="column"
  id="select-drop__select"
>
  <div
    class="StyledBox-bStriS feBFzz"
    direction="column"
    overflow="auto"
  >
    <div
      class="StyledBox-bStriS jDxevM"
      direction="column"
      role="menubar"
      tabindex="-1"
    >
      <button
        class="StyledButton-gXzblK khQPBH"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-bStriS gedxom"
          direction="column"
        >
          <span
            class="StyledText-eJMSZI bUVmvh"
          >
            one
          </span>
        </div>
      </button>
      <button
        class="StyledButton-gXzblK khQPBH"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-bStriS gedxom"
          direction="column"
        >
          <span
            class="StyledText-eJMSZI bUVmvh"
          >
            two
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select mounts 4`] = `
"

.iQipYn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width:700px) {
  .cfJbKA {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .khQPBH {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`Select mounts 5`] = `
<div
  class="StyledBox-bStriS jDxevM"
  direction="column"
  role="menubar"
  tabindex="-1"
>
  <button
    class="StyledButton-gXzblK khQPBH"
    role="menuitem"
    type="button"
  >
    <div
      class="StyledBox-bStriS gedxom"
      direction="column"
    >
      <span
        class="StyledText-eJMSZI bUVmvh"
      >
        one
      </span>
    </div>
  </button>
  <button
    class="StyledButton-gXzblK khQPBH"
    role="menuitem"
    type="button"
  >
    <div
      class="StyledBox-bStriS gedxom"
      direction="column"
    >
      <span
        class="StyledText-eJMSZI bUVmvh"
      >
        two
      </span>
    </div>
  </button>
</div>
`;

exports[`Select mounts with complex options and children 1`] = `
<button
  class="StyledButton-gXzblK cfJbKA"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS janhJy"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS jagiFv"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts with complex options and children 2`] = `
<button
  class="StyledButton-gXzblK cfJbKA"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-bStriS janhJy"
    direction="row"
    aria-hidden="true"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="text"
        class="StyledTextInput-bzOzsW VzRqL"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-bStriS jagiFv"
      direction="column"
      style="min-width: auto;"
    >
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts with complex options and children 3`] = `
<div
  class="StyledBox-bStriS iQipYn"
  direction="column"
  id="select-drop__select"
>
  <div
    class="StyledBox-bStriS feBFzz"
    direction="column"
    overflow="auto"
  >
    <div
      class="StyledBox-bStriS jDxevM"
      direction="column"
      role="menubar"
      tabindex="-1"
    >
      <button
        class="StyledButton-gXzblK khQPBH"
        role="menuitem"
        type="button"
      >
        <span>
          one
        </span>
      </button>
      <button
        class="StyledButton-gXzblK khQPBH"
        role="menuitem"
        type="button"
      >
        <span>
          two
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select mounts with complex options and children 4`] = `
"

.iQipYn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width:700px) {
  .cfJbKA {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .khQPBH {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`Select mounts with search 1`] = `
<div
  class="StyledBox-bStriS iQipYn"
  direction="column"
  id="select-drop__select"
>
  <div
    class="StyledBox-bStriS fGEMtx"
    direction="column"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="search"
        class="StyledTextInput-bzOzsW bNmXcC"
        autocomplete="off"
        value=""
      />
    </div>
  </div>
  <div
    class="StyledBox-bStriS feBFzz"
    direction="column"
    overflow="auto"
  >
    <div
      class="StyledBox-bStriS jDxevM"
      direction="column"
      role="menubar"
      tabindex="-1"
    >
      <button
        class="StyledButton-gXzblK khQPBH"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-bStriS gedxom"
          direction="column"
        >
          <span
            class="StyledText-eJMSZI bUVmvh"
          >
            one
          </span>
        </div>
      </button>
      <button
        class="StyledButton-gXzblK khQPBH"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-bStriS gedxom"
          direction="column"
        >
          <span
            class="StyledText-eJMSZI bUVmvh"
          >
            two
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select mounts with search 2`] = `
"

.iQipYn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width:700px) {
  .cfJbKA {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .khQPBH {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`Select mounts with search 3`] = `
<input
  type="search"
  class="StyledTextInput-bzOzsW bNmXcC"
  autocomplete="off"
  value=""
/>
`;

exports[`Select mounts with search 4`] = `
<div
  class="StyledBox-bStriS iQipYn"
  direction="column"
  id="select-drop__select"
>
  <div
    class="StyledBox-bStriS fGEMtx"
    direction="column"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-bPTWQl hasTun"
    >
      <input
        type="search"
        class="StyledTextInput-bzOzsW bNmXcC"
        autocomplete="off"
        value="a"
      />
    </div>
  </div>
  <div
    class="StyledBox-bStriS feBFzz"
    direction="column"
    overflow="auto"
  >
    <div
      class="StyledBox-bStriS jDxevM"
      direction="column"
      role="menubar"
      tabindex="-1"
    >
      <button
        class="StyledButton-gXzblK khQPBH"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-bStriS gedxom"
          direction="column"
        >
          <span
            class="StyledText-eJMSZI bUVmvh"
          >
            one
          </span>
        </div>
      </button>
      <button
        class="StyledButton-gXzblK khQPBH"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-bStriS gedxom"
          direction="column"
        >
          <span
            class="StyledText-eJMSZI bUVmvh"
          >
            two
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select mounts with search 5`] = `
"

.iQipYn {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width:700px) {
  .cfJbKA {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .khQPBH {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;
